# SignalAIBot

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
docker/: entrypoint.sh  run-as-signald-entrypoint.sh  signalaibot.sh
docker/volumes/example_account/persistent_data/: .env  signalaibot_state.yaml
docker/volumes/example_account/secrets/: BOT_USERNAME
src/signalaibot/: __init__.py  bot.py  main.py
src/signalaibot/extensions/: semaphore_extensions.py
src/signalaibot/handlers/: __init__.py  ai_handler.py  apod_handler.py  bbc_handler.py
src/signalaibot/handlers/framework/: admin_handler.py  auth_handler.py  handler_base.py  history_handler.py
src/signalaibot/patches/: semaphore_patches.py
src/signalaibot/settings/: config_manager.py  constants.py  dotenv.py  model.py  state_manager.py
test/: test_dummy.py  test_json_io.py
